Modify image file and alignment correction

--- a/style.css
+++ b/style.css
@@ -21,7 +21,13 @@ body {
 /* container desktop version applied 768px and above */
 @media (min-width: 768px) {
   .container {
-    max-width: 1440px;
+    max-width: 100%;
+    background-color: #f7f7f9;
+    margin: 0;
+  }
+
+  body {
+    background-color: #f7f7f9;
   }
 }
 
@@ -34,8 +40,6 @@ body {
   height: 718px;
   padding-top: 58px;
   background-size: 100% auto;
-  padding-left: 24px;
-  padding-right: 24px;
 }
 
 /* headline  desktop version applied for 768px and above */
@@ -69,6 +73,11 @@ body {
 @media (max-width: 768px) {
   .desktopmenu {
     display: none;
+  }
+
+  .headline {
+    padding-left: 24px;
+    padding-right: 24px;
   }
 
   .desktoppic {
@@ -120,6 +129,14 @@ body {
     margin-top: 0;
   }
 
+  .toolbar {
+    overflow: hidden;
+    background-color: white;
+    position: fixed;
+    width: 100%;
+    top: 0;
+  }
+
   /* hide menu bar */
   .mobilemenu,
   .mobilemenu > i {
@@ -128,7 +145,7 @@ body {
 
   /* styling my logo  */
   .toolbar > nav > a {
-    padding-left: 155px;
+    padding-left: 50px;
     font-size: 18px;
     font-weight: 700;
   }
@@ -143,7 +160,6 @@ body {
   ul.desktopmenu > li {
     list-style: none;
     display: flex;
-    text-align: center;
     margin-left: 32px;
   }
 
@@ -153,6 +169,8 @@ body {
     font-weight: 500;
     line-height: 20px;
     color: #344563;
+    align-items: flex-end;
+    align-self: flex-end;
   }
 
   /* implementing hover and active for desktop menu */
@@ -431,7 +449,7 @@ ul.tags > li {
     background-color: white;
     margin-left: auto;
     margin-right: auto;
-    width: 1156px;
+    width: 90%;
     height: 496px;
     border-radius: 24px;
     border-style: solid;
@@ -439,7 +457,7 @@ ul.tags > li {
   }
 
   img {
-    width: 544px;
+    width: 80%;
     height: 448px;
     border-radius: 8px;
     margin: 24px;
@@ -688,7 +706,7 @@ hr {
     display: grid;
     grid-template-columns: 1fr 1fr;
     background-color: white;
-    width: 1390px;
+    width: 96%;
     border-top-right-radius: 75px;
     border-style: solid;
     border-width: 1px;
@@ -893,7 +911,7 @@ footer {
 @media (min-width: 768px) {
   footer {
     width: 100%;
-    max-width: 1440px;
+    max-width: 1300px;
     height: 846px;
     background: url("images/desktop_footer.png") right top no-repeat;
     background-size: 85% 95%, 100%;
@@ -901,6 +919,7 @@ footer {
     background-position-y: 140px;
     border-top-left-radius: 150px;
     margin-top: -300px;
+    margin-bottom: 0;
   }
 
   .contactme {
